--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
       <title><strong>TEST</strong></title>
       
-      <link rel="stylesheet" type="text/css" href="theme.css">
+      <link rel="stylesheet" type="text/css" href="interface.css">
 
     </head>
     <body>
