--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
   <html>
     <head>
-      <title><strong>TEST</strong></title>
+      <title>TEST</title>
       
       <link rel="stylesheet" type="text/css" href="interface.css">
 
