--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <br />
       <button class="buttonSmall" id="testButton" onclick="function1()">Click To Recieve A Message</button>
       <br>
-      <button class="buttonSmall" id="testButton2" onclick="function2()">This is another cool Button!</button>
+      <button class="buttonSmall" id="testButton2" onclick="poop()">This is another cool Button!</button>
       
       </div>
       <script type="text/javascript" src="main.js"></script>
