--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <br>
       <a href="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSzYvaX9vfaWVTdCetvMeIAXW7l-Ru4aPMheJITuG69yg7f8ks0hJqbqPY"><img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSzYvaX9vfaWVTdCetvMeIAXW7l-Ru4aPMheJITuG69yg7f8ks0hJqbqPY"/></a>
       <br />
-      <button class="buttonSmall" id="testButton" onclick="function1"()>Click To Recieve A Message</button>
+      <button class="buttonSmall" id="testButton" onclick="function1()">Click To Recieve A Message</button>
       <br>
-      <button class="buttonSmall" id="testButton2" onclick="poop"()>This is another cool Button!</button>
+      <button class="buttonSmall" id="testButton2" onclick="poop()">This is another cool Button!</button>
       
       </div>
       <script type="text/javascript" src="main.js"></script>
