--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
       <div>
-      <h1>This is my test page</h1>
+      <h1 id="headingOne">This is my test page</h1>
       <br>
       <p>It is where I <strong><em>TEST</em></strong> my stuff!!</p>
       <br>
