--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <button id="testButton" onclick="function1()">Click To Recieve A Message</button>
       <br>
       <button id="testButton2" onclick="poop()">This is another cool Button!</button>
+      <br>
+      <button id="testButton3" onclick="javaTest()">This is a button for running other JAVA stuff!</button>
       
       </div>
       <script type="text/javascript" src="main.js"></script>
