--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <br>
       <p>It is where I <strong><em>TEST</em></strong> my stuff!!</p>
       <br>
-      <a href="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSzYvaX9vfaWVTdCetvMeIAXW7l-Ru4aPMheJITuG69yg7f8ks0hJqbqPY"><img class="display"id="kspImg"src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSzYvaX9vfaWVTdCetvMeIAXW7l-Ru4aPMheJITuG69yg7f8ks0hJqbqPY"/></a>
+      <a href="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSzYvaX9vfaWVTdCetvMeIAXW7l-Ru4aPMheJITuG69yg7f8ks0hJqbqPY"><img class="displayed" id="kspImg"src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSzYvaX9vfaWVTdCetvMeIAXW7l-Ru4aPMheJITuG69yg7f8ks0hJqbqPY"/></a>
       <br />
       <button id="testButton" onclick="function1()">Click To Recieve A Message</button>
       <br>
