--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
       <a href="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSzYvaX9vfaWVTdCetvMeIAXW7l-Ru4aPMheJITuG69yg7f8ks0hJqbqPY"><img class="displayed" id="kspImg"src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSzYvaX9vfaWVTdCetvMeIAXW7l-Ru4aPMheJITuG69yg7f8ks0hJqbqPY"/></a>
       <br />
       <button id="testButton" onclick="function1()">Click To Recieve A Message</button>
-      <br>
+      <br />
       <button id="testButton2" onclick="poop()">This is another cool Button!</button>
-      <br>
+      <br />
       <button id="testButton3" onclick="javaTest()">This is a button for running other JAVA stuff!</button>
-      
+      <br/>
+      <span id="moneyBox">Money: <span id="money">0</span></span>
       </div>
       <script type="text/javascript" src="main.js"></script>
     </body>
