--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
       <br />
       <button id="testButton2" onclick="poop()">This is another cool Button!</button>
       <br />
-      <button id="testButton3" onclick="javaTest()">This is a button for running other JAVA stuff!</button>
-      <br/>
+      <button id="testButton3" onclick="javaTest()">Click to Get Money!</button>
+      <br />
+      <button id="testButton3" onclick="moneySellTest()">Click me to sell your money...</button>
+      <br />
       <span id="moneyBox">Money: <span id="money">0</span></span>
       </div>
       <script type="text/javascript" src="main.js"></script>
