--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       <br />
       <button id="testButton4" onclick="moneySellTest()">Click me to sell your money...</button>
       <br />
+      <button id="testButton5" onclick="clearMoneyTest()">Click to clear all of your money!</button>
+      <br />
       <span id="moneyBox">Money: <span id="money">0</span></span>
       </div>
       <script type="text/javascript" src="main.js"></script>
