--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
       <button id="testButton5" onclick="clearMoneyTest()">Click to clear all of your money!</button>
       <br />
       <span id="moneyBox">Money: <span id="money">0</span></span>
+      <br />
+      <br />
+      <button id="oreButton" onclick="getOre()">Click to Gain Ore!</button>
+      <br />
+      <button id="oreSellButton" onclick="sellOre()">CLick to Sell Your Ore!</button>
+      <br />
+      <br />
+      <span id="metalStore">Metal: <span id="metal">0</span></span>
+      <br />
+      <span id="oreStore">Metal: <span id="ore">0</span></span>
       </div>
       <script type="text/javascript" src="main.js"></script>
     </body>
