--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <br />
       <span id="metalStore">Metal: <span id="metal">0</span></span>
       <br />
-      <span id="oreStore">Metal: <span id="ore">0</span></span>
+      <span id="oreStore">Ore: <span id="ore">0</span></span>
       </div>
       <script type="text/javascript" src="main.js"></script>
     </body>
