--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <br />
       <button id="testButton3" onclick="javaTest()">Click to Get Money!</button>
       <br />
-      <button id="testButton4" onclick="moneySellTest()">Click me to sell your money...</button>
+      <button id="testButton4" onclick="moneySellTest()">Click me to Spend your money...</button>
       <br />
       <button id="testButton5" onclick="clearMoneyTest()">Click to clear all of your money!</button>
       <br />
@@ -29,12 +29,14 @@
       <br />
       <button id="oreButton" onclick="getOre()">Click to Gain Ore!</button>
       <br />
-      <button id="oreSellButton" onclick="sellOre()">CLick to Sell Your Ore!</button>
+      <button id="oreSellButton" onclick="sellOre()">CLick to Refine Your Ore!</button>
       <br />
       <br />
       <span id="metalStore">Metal: <span id="metal">0</span></span>
       <br />
       <span id="oreStore">Ore: <span id="ore">0</span></span>
+      <br />
+      <button id="modifierButton" onclick="increaseModifier()">Click to Increase Ore Modifier! Modifier: <span id="modifierNumber">1</span></button>
       </div>
       <script type="text/javascript" src="main.js"></script>
     </body>
