--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
       <br />
       <span id="oreStore">Ore: <span id="ore">0</span></span>
       <br />
-      <button id="modifierButton" onclick="increaseModifier()">Click to Increase Ore Modifier! Modifier: <span id="modifierNumber">1</span></button>
+      <button id="modifierButton" onclick="increaseModifier()">Click to Increase Ore Modifier!</button>
+      <br />
+      <span id="modifierNumber">Ore Modifier: <span id="modifierNumber">1</span></span>
       </div>
       <script type="text/javascript" src="main.js"></script>
     </body>
