--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <span id="moneyBox">Money: <span id="money">0</span></span>
       <br />
       <br />
-      <button id="oreButton" onclick="getOre()">Click to Gain Ore!</button>
+      <button id="oreButton" onclick="getOre()"><img id="pickaxeImage" src="http://rlv.zcache.com/black_pickax_crossed_postcard-r53325d0a17ae47a0b551eb124749dbce_vgbaq_8byvr_324.jpg"/></button>
       <br />
       <button id="oreSellButton" onclick="sellOre()">CLick to Refine Your Ore!</button>
       <br />
